# ZorakBot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Admin_Funcs.py  BotFuncs.py  Dockerfile  Fun_Funcs.py  LICENSE  Procfile  README.md  Readme.md  Utility_Funcs.py  dc-dev.yaml  dc-prod.yaml  docker-compose.yaml  keep_alive.py  main.py  procfile  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  server.toml  setup.cfg  setup.py  template.env  versioneer.py
.github/workflows/: bump.yml  deploy.yml  pylint.yml  release.yml
Challenges/: day_1.txt  day_12.txt  day_13.txt  day_16.txt  day_17.txt  day_4.txt  day_5.txt  day_7.txt  day_9.txt
Resources/: server.toml  test_server.toml
Resources/DailyChallenges/: day_10.txt  day_11.txt  day_14.txt  day_18.txt  day_19.txt  day_2.txt  day_20.txt  day_6.txt  day_8.txt
Resources/ServerConfig/PracticalPython/: channel_info.toml  reaction_roles.toml  verification_options.toml
Resources/ServerConfig/Zorak-Dev/: channel_info.toml  reaction_roles.toml  verification_options.toml
Resources/ServerConfig/dev/: FAKE_DB_settings.json  testing.py
Resources/ServerConfig/prod/: channel_info.toml  reaction_roles.toml
groups/: admin.py  fun.py  utility.py
src/: __main__.py
src/Resources/: server.toml
src/Settings/: PracPyProd.toml  PracPyTest.toml  ReactionRoles.toml  server.toml  test_server.toml
src/cogs/: _settings.py  admin_emergencey.py  admin_purge.py  admin_startup.py  admin_utility.py  event_challenges.py  general_define.py  general_documentation.py  general_fun.py  general_help.py  general_tickets.py  general_utility.py  logging_avatars.py  logging_leaving.py  logging_member_ban.py  logging_member_kick.py  logging_member_leaving.py  logging_member_roles.py  logging_member_unban.py  logging_message_delete.py  logging_message_edit.py  logging_name_changes.py  logging_roles.py  logging_tickets.py  moderation_invites.py  points.py  reaction_roles.py  rss.py  testing.py  verification_on_join.py  verification_on_verified.py  zorak_error_logging.py
src/cogs/admin/: _admin_automod_spam_messages.py  admin_ban.py  admin_delete_user_messages.py  admin_embed.py  admin_emergencey.py  admin_kick.py  admin_mute.py  admin_purge.py  moderation_invites.py  verification_on_join.py  verification_on_verified.py
src/cogs/general/: _ARCHIVE.py  general_catpic.py  general_define.py  general_devtimes.py  (+17 more)
src/zorak/: __main__.py  _version.py
src/zorak_bot/: __main__.py
zorak_bot/: Dockerfile  __main__.py  admin.py  docker-compose.yaml  error_handling.py  main.py  play.py  server.toml  test_server.toml
zorak_bot/DailyChallenges/: day_15.txt  day_3.txt
zorak_bot/OLD COGS/: code.py  fun.py  games.py  general.py  stable_diffusion.py
zorak_bot/api/: __init__.py  api.py  blueprints.py
zorak_bot/cogs/: 50_challenges.py  RSS_feeds.py  _settings.py  admin.py  admin_emergencey.py  admin_logging.py  admin_moderation.py  admin_purge.py  admin_utility.py  admin_verification.py  blackjack.py  code.py  daily_challenge.py  event_challenges.py  fun.py  games.py  general.py  general_fun.py  general_help.py  general_tickets.py  general_utility.py  help.py  logging_avatars.py  logging_leaving.py  logging_member_ban.py  logging_member_unban.py  logging_message_delete.py  logging_message_edit.py  logging_name_changes.py  logging_tickets.py  moderation_invites.py  points.py  rss.py  startup.py  utility.py  verification_on_join.py  verification_on_verified.py  zorak_error_logging.py
zorak_bot/core/: admin.py  play.py
zorak_bot/util/: __init__.py  args_util.py  error_handling.py  general.py  logging_util.py
(+125 files in other folders)
