[metadata]
name = zorak_bot
version = 0.0.1
url = https://github.com/Xarlos89/ZorakBot
download_url = https://github.com/Xarlos89/ZorakBot
description = The house bot of Practical Python
long_description = file: README.md
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
python_requires = >=3.7
install_requires =
    py-cord
    beautifulsoup4
    requests
    matplotlib
    DateTime
    pytz
    pistonapi
    toml
    feedparser
    html2text
    pymongo

packages = find:

[options.extras_require]
dev =
    cfgv==3.3.1
    distlib==0.3.7
    filelock==3.12.2
    identify==2.5.25
    nodeenv==1.8.0
    platformdirs==3.9.1
    pre-commit==3.3.3
    PyYAML==6.0.1
    ruff==0.0.278
    virtualenv==20.24.2

[flake8]
per-file-ignores =
    *.pyi:E301,E302,E704
ignore = 
    E501
    E252
    W503
max-line-length = 150